# StockVision

./: .cursorrules  .dockerignore  .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  alembic.ini  docker-compose.oracle.yml  docker-compose.yml  netlify.toml  pytest.ini  render.yaml
backend/: collect_all_stocks.py  env.example  requirements.txt  stock_symbols.py  test_backtest_lookahead.py  test_core_business.py  test_data_collection.py  test_prediction.py
backtest_server/: Dockerfile  main.py  requirements.txt
changeLog/: ChangeLog_250821_1.md  ChangeLog_250825_1.md  ChangeLog_250825_2.md  ChangeLog_250825_3.md  ChangeLog_250826_1.md
cloud_server/: .env.example  Dockerfile  __init__.py  main.py  requirements.txt
data_server/: Dockerfile  main.py  requirements.txt
docs/: README.md  architecture-diagram.md  architecture-phase3.md  architecture.md  development-plan-v2.md  development-plan-v3.md  development-plan.md  dsl-v2-reference.md  frontend-admin-unified-design-2026-03-09.md  future-improvements.md  ideas.md  integrated-development-plan.md  legal.md  log-system-improvements.md  plan-phase-e.md  roadmap.md  (+2 more)
sv_core/: __init__.py  pyproject.toml
sv_core/broker/: __init__.py  base.py  models.py
sv_core/indicators/: __init__.py  calculator.py
sv_core/indicators/tests/: test_calculator.py
sv_core/parsing/: __init__.py  ast_nodes.py  builtins.py  errors.py  evaluator.py  lexer.py  parser.py  tokens.py
sv_core/parsing/tests/: test_builtins_schema.py  test_evaluator.py  test_evaluator_v2.py  test_lexer.py  test_parser.py  test_parser_v2.py
(+894 files in other folders)
